# obs-plugintemplate

./: CMakeLists.txt  buildspec.json
data/locale/: en-US.ini  zh-CN.ini
src/: ai-mouse-follower-filter.c  plugin-main.c  yolo-filter.c  yolo-filter.cpp  yolo-filter.h
